fixed img link...background not showing up on cgdibble.github

--- a/stylesheets/blog-stylesheet.css
+++ b/stylesheets/blog-stylesheet.css
@@ -5,7 +5,7 @@ html {
   padding: 0;
   font-family: "Abel";
   /*REMOVE THIS if you want to get rid of background image*/
-  background-image: url("../imgs/background.jpg");
+  background-image: url("../imgs/background.JPG");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100%;
